# video2manual_documents

./: .env.sample  .gitignore  CLAUDE.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/core/: __init__.py  config.py  errors.py  logger.py
backend/app/models/: __init__.py  schemas.py
backend/app/routes/: __init__.py  export.py  manual.py  process.py  videos.py
backend/app/services/capture/: __init__.py  planner.py
backend/app/services/export/: __init__.py  pdf_exporter.py
backend/app/services/scenes/: __init__.py  base.py  opencv_detector.py
backend/app/services/stt/: __init__.py  base.py  dummy_stt.py  gpt4o_stt.py  whisper_stt.py
backend/app/services/summarizer/: __init__.py  base.py  openai_summarizer.py
backend/app/services/template/: __init__.py  renderer.py
backend/app/utils/: __init__.py  ffmpeg_wrapper.py
backend/tests/: test_api.py
docs/: API.md
frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: Layout.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: ExportPage.tsx  ReviewPage.tsx  TemplatePage.tsx  UploadPage.tsx
templates/: manual_default.md.j2
